test_regress/t/t_trace_dumpvars_cpptop2.out
%Error: t/t_trace_dumpvars.v:272:5: $dumpvars target not found: cpptop.notfound
  272 |     $dumpvars(0, cpptop, cpptop.notfound);
      |     ^~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
